<?xml version="1.0"?>
<package format="2">
  <name>ada_teleoperation</name>
  <version>0.0.0</version>
  <description>
    Control of ada through a specified user input device. This package includes both our code for teleoperating ada, as well as tools useful for shared autonomy.
  </description>

  <author email="sjavdani@cmu.edu">Shervin Javdani</author>
  <maintainer email="sjavdani@cmu.edu">Shervin Javdani</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>adapy</depend>
  <depend>razer_hydra</depend>
  <depend>mouse_as_joystick</depend>

</package>
